[metadata]
name = driver-license-gen
version = 1.0
author = Roggeo
author_email = geovanirog@gmail.com
description = U.S. driver license generator
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent